DeleteTaskTodoMicroservice/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-task
spec:
  replicas: 3
  selector:
    matchLabels:
      app: delete-task
  template:
    metadata:
      labels:
        app: delete-task
    spec:
      containers:
      - name: delete-task
        image: devopsinsiders/delete-task
        ports:
        - containerPort: 8000
