DeleteTaskTodoMicroservice/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delete-task-ingress
spec:
  ingressclassname : nginx
  rules:
  - host: delete-task.cptiwari.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: delete-task
            port: 
              number: 80
